src/objects/PSA_Apex_Validations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enables activation / deactivation of trigger apex validations</description>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the apex validation to verify the budget is approved prior to moving the project to In Progress is enabled</description>
        <inlineHelpText>Determines whether the apex validation to verify the budget is approved prior to moving the project to In Progress is enabled</inlineHelpText>
        <label>Approved Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_Pre_Pay_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validates that there is pre-pay budget remaining in order to release the Pre-Pay Applies Billing Event</description>
        <inlineHelpText>Validates that there is pre-pay budget remaining in order to release the Pre-Pay Applies Billing Event</inlineHelpText>
        <label>BE Pre-pay Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Labor_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total expenses billing amounts cannot exceed the projects&apos; Expense Billing Limit</description>
        <inlineHelpText>Total expenses billing amounts cannot exceed the projects&apos; Expense Billing Limit</inlineHelpText>
        <label>Expense Labor Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Single_OLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled will prevent the same OLI from being used on more than one Resource Request</description>
        <inlineHelpText>If enabled will prevent the same OLI from being used on more than one Resource Request</inlineHelpText>
        <label>Resource Request Single OLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timecard_Labor_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validates that the total timecard amount approved does not exceed the project&apos;s Labor Billing Limit</description>
        <inlineHelpText>Validates that the total timecard amount approved does not exceed the project&apos;s Labor Billing Limit</inlineHelpText>
        <label>Timecard Labor Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timecard_Time_Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validates that time cannot be submitted for a closed time period</description>
        <inlineHelpText>Validates that time cannot be submitted for a closed time period</inlineHelpText>
        <label>Timecard Time Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <label>PSA Apex Validations</label>
</CustomObject>